[metadata]
name = gbp-tempest-plugin
summary = OpenStack Group Based Policy (GBP) Functional Tests
description-file =
    README.rst
author = Uemit Seren
author-email = uemit.seren@gmi.oeaw.ac.at
home-page = https://docs.openstack.org/designate-tempest-plugin/latest/
classifier =
    Environment :: OpenStack
    Environment :: No Input/Output (Daemon)
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Topic :: Internet :: Name Service (DNS)

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    gbp_tempest_plugin

[entry_points]
tempest.test_plugins =
    gbp = gbp_tempest_plugin.plugin:GbpTempestPlugin

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
